# otus_project

./: CMakeLists.txt  Dockerfile  README.md
src/: Items.cpp  Items.h  Logger.cpp  Logger.h  Responses.cpp  Responses.h  ServiceFuncs.cpp  ServiceFuncs.h  TargetStruct.cpp  TargetStruct.h  main.cpp
src/Handlers/: Handler_marquiz.cpp  Handler_marquiz.h  Handler_tilda.cpp  Handler_tilda.h
src/Transformers/: Transformer_marquiz.cpp  Transformer_marquiz.h  Transformer_tilda.cpp  Transformer_tilda.h
